# ci_exec

./: .azure-pipelines.yml  .travis.yml  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.ci/: run_demos.yml  test_python_and_upload.yml
.github/workflows/: dist.yml  provider_check.yml  py_350.yml  run_demos.yml  test_python_and_upload.yml
ci_exec/: __init__.py  colorize.py  core.py  patch.py  provider.py  utils.py
ci_exec/parsers/: __init__.py  cmake_parser.py  utils.py
demos/: __init__.py  __main__.py  custom_log_stage.py
docs/: requirements.txt
docs/source/: changelog.rst  conf.py  demos.rst  important_usage_notes.rst  index.rst
docs/source/_extensions/: youtube.py
docs/source/api/: colorize.rst  core.rst  parsers.rst  patch.rst  provider.rst  root.rst  utils.rst
docs/source/api/parsers/: cmake_parser.rst  utils.rst
docs/source/demos/: custom_log_stage.rst
testing/: __init__.py  colorize.py
tests/: colorize.py  core.py  full_provider_test.py  patch.py  provider.py  utils.py
tests/parsers/: cmake_parser.py  utils.py
