[build-system]
requires = ["setuptools >= 40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

################################################################################
[tool.coverage.run]
data_file = ".coverage"
include = [
    "ci_exec/**",
    "tests/**",
    "demos/**"]

################################################################################
[[tool.mypy.overrides]]
module = [
    "pytest",
    "pygments",
    "setuptools"]

################################################################################
[tool.pytest.ini_options]
cache_dir = "tests/.cache"
norecursedirs = [
    ".git/",
    "docs/",
    "ci_exec/"]
python_files = ["tests/**.py"]
