[metadata]
name = ci_exec
version = attr: ci_exec.__version__
python_requires = >=3.6
license = Apache v2.0
author = Stephen McDowell
author_email = svenevs.pypi@gmail.com

description =
    A wrapper package designed for running continuous integration (CI) build steps using
    Python 3.6+.
long_description = file: README.rst
long_description_content_type = text/x-rst

url = https://github.com/svenevs/ci_exec
project_urls =
    Documentation = https://ci-exec.readthedocs.io/en/latest/
    Source = https://github.com/svenevs/ci_exec
    Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9


[options]
zip_safe = False
include_package_data = True
packages = find:

[options.package_data]
ci_exec = py.typed

[options.packages.find]
exclude =
    demos
    demos.*
    docs
    docs.*
    tests
    tests.*
